# annolab

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  setup.cfg
.envs/.local/: .postgres
.github/workflows/: ci.yml
annolab/: conftest.py  context_processors.py
annolab/annotations/: apps.py  models.py
annolab/annotations/api/: serializer.py  views.py
annolab/annotations/migrations/: 0001_initial.py
annolab/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
annolab/groups/: apps.py  models.py
annolab/groups/api/: serializer.py  views.py
annolab/groups/migrations/: 0001_initial.py  0002_alter_group_avatar.py
annolab/images/: apps.py  models.py
annolab/images/api/: serializer.py  views.py
annolab/images/migrations/: 0001_initial.py  0002_alter_image_created_date.py
annolab/organizations/: apps.py  managers.py  models.py
annolab/organizations/api/: serializers.py  views.py
annolab/organizations/middlewares/: middlewares.py
annolab/organizations/migrations/: 0001_initial.py  0002_alter_organization_owner.py  0003_auto_20220424_2357.py  0004_auto_20220518_2144.py
annolab/projects/: apps.py  managers.py  models.py
annolab/projects/api/: serializer.py  views.py
annolab/projects/migrations/: 0001_initial.py  0002_alter_project_name.py  0003_auto_20220424_2357.py  0004_auto_20220518_2144.py
annolab/teams/: apps.py  managers.py  models.py
annolab/teams/api/: serializer.py  views.py
annolab/teams/migrations/: 0001_initial.py  0002_auto_20220424_2357.py  0003_auto_20220518_2144.py  0004_team_members.py
annolab/templates/: base.html
annolab/templates/email/: password_reset.html
annolab/users/: admin.py  apps.py  emails.py  models.py  urls.py  views.py
annolab/users/api/: serializers.py  views.py
annolab/users/migrations/: 0002_auto_20220219_2201.py  0003_user_security_question.py  0004_remove_user_security_question.py  0005_auto_20220321_2251.py  0006_auto_20220321_2307.py  0007_alter_user_username.py  0008_alter_user_name.py
annolab/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
annolab/utils/mixins/: URLParameteMixin.py
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  base.py.bak  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
requirements/: base.txt
